A simple title change

--- a/.github/workflows/deploy-uat-apps.yml
+++ b/.github/workflows/deploy-uat-apps.yml
@@ -40,8 +40,8 @@ jobs:
       - name: 🏷️🔮 Get next UAT release semver version
         id: semantic_release_info
         uses: cycjimmy/semantic-release-action@v3.2.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_AUTOMATOR_PAT }}
+        # env:
+        #   GITHUB_TOKEN: ${{ secrets.RELEASE_AUTOMATOR_PAT }}
         with:
           semantic_version: 19
       - name: 📝 Calculate complete UAT version for next version
@@ -55,20 +55,19 @@ jobs:
         with:
           tag: "release/uat/${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
           message: "UAT release ${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
-          github_token: ${{ secrets.RELEASE_AUTOMATOR_PAT }}
 
-  deployUat:
-    name: Deploy UAT
-    uses: ./.github/workflows/_deploy-env-apps.yml
-    needs: gitRelease
-    secrets: inherit
-    with:
-      android-environment-name: 'Android UAT'
-      android-environment-url: 'https://play.google.com/console/u/0/developers/7200533445067191438/app/4975719898219218293/tracks/internal-testing'
-      android-package-name: 'com.orevial.uat'
-      android-release-status: 'completed'
-      ios-environment-name: 'iOS UAT'
-      ios-environment-url: 'https://appstoreconnect.apple.com/apps/1664853019/testflight'
-      short-environment-name: 'UAT'
-      flavor: 'uat'
-      new-pubspec-version: ${{ needs.gitRelease.outputs.new_pubspec_version }}
+  # deployUat:
+  #   name: Deploy UAT
+  #   uses: ./.github/workflows/_deploy-env-apps.yml
+  #   needs: gitRelease
+  #   secrets: inherit
+  #   with:
+  #     android-environment-name: 'Android UAT'
+  #     android-environment-url: 'https://play.google.com/console/u/0/developers/7200533445067191438/app/4975719898219218293/tracks/internal-testing'
+  #     android-package-name: 'com.orevial.uat'
+  #     android-release-status: 'completed'
+  #     ios-environment-name: 'iOS UAT'
+  #     ios-environment-url: 'https://appstoreconnect.apple.com/apps/1664853019/testflight'
+  #     short-environment-name: 'UAT'
+  #     flavor: 'uat'
+  #     new-pubspec-version: ${{ needs.gitRelease.outputs.new_pubspec_version }}
