--- a/.github/workflows/_test_with_coverage.yml
+++ b/.github/workflows/_test_with_coverage.yml
@@ -22,6 +22,9 @@ jobs:
           cache: true
       - name: ⚙️ Setup Melos
         uses: bluefireteam/melos-action@v2
+      # There must be a pubspec.yaml in the root of the repository, next to the melos.yaml file with the specific version of melos
+      - name: 📄 Move dummy pubspec.yaml to root
+        run: cp scripts/pubspec_template.yaml pubspec.yaml
       - name: ⚙️ Install dependencies for all packages
         run: melos build:pub_get:all
       - name: 🧪 Run tests with coverage
