--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -9,17 +9,17 @@ environment:
   flutter: ">=3.7.0 <4.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
+  cupertino_icons: ^1.0.2
   design_system:
     path: ../design_system
-  cupertino_icons: ^1.0.2
-
-dev_dependencies:
-  flutter_test:
+  flutter:
     sdk: flutter
 
+dev_dependencies:
   flutter_lints: ^2.0.0
+  flutter_test:
+    sdk: flutter
+  lint: ^2.2.0
 
 flutter:
   uses-material-design: true
