--- a/melos.yaml
+++ b/melos.yaml
@@ -205,5 +205,5 @@ scripts:
       scope: "flutter_ci_cd_demo"
 
 environment:
-  sdk: '>=2.19.0 <3.0.0'
-  flutter: ">=3.7.0 <4.0.0"
+  sdk: '>=3.0.0 <4.0.0'
+  flutter: '>=3.7.0 <4.0.0'
